pkg/check/testdata/ub/types/valid/skips-schemaless-library.ub
resources: { one: ext.thing { name: 'a' } }
