pkg/check/testdata/ub/types/invalid/missing-library-config-binding-field.ub
imports: {
  aws: 'github.com/acme/aws'
}
library-configs: {
  aws: { retries: 3 }
}
resources: {
  bucket: aws.bucket {
    name:    'bucket'
    retries: 3
  }
}
